   <project xmlns="http://maven.apache.org/POM/4.0.0"
            xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
            xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
       <modelVersion>4.0.0</modelVersion>
       <groupId>pacman-game</groupId>
       <artifactId>pacman-game</artifactId>
       <version>1.0</version>

       <properties>
           <maven.compiler.source>17</maven.compiler.source>
           <maven.compiler.target>17</maven.compiler.target>
           <javafx.version>17.0.2</javafx.version>
       </properties>

       <repositories>
           <repository>
               <id>openjfx-repo</id>
               <url>https://openjfx.io/maven</url>
           </repository>
       </repositories>

       <dependencies>
           <dependency>
               <groupId>org.openjfx</groupId>
               <artifactId>javafx-controls</artifactId>
               <version>${javafx.version}</version>
           </dependency>
           <dependency>
               <groupId>org.openjfx</groupId>
               <artifactId>javafx-fxml</artifactId>
               <version>${javafx.version}</version>
           </dependency>
           <dependency>
               <groupId>org.openjfx</groupId>
               <artifactId>javafx-media</artifactId>
               <version>${javafx.version}</version>
           </dependency>
       </dependencies>

       <build>
           <resources>
               <resource>
                   <directory>src/main/resources</directory>
                   <includes>
                       <include>**/*.txt</include>
                       <include>**/*.png</include>
                       <include>**/*.jpeg</include>
                       <include>**/*.gif</include>
                   </includes>
               </resource>
           </resources>
           <plugins>
               <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-compiler-plugin</artifactId>
                   <version>3.8.1</version>
                   <configuration>
                       <source>${maven.compiler.source}</source>
                       <target>${maven.compiler.target}</target>
                   </configuration>
               </plugin>
               <plugin>
                   <groupId>org.openjfx</groupId>
                   <artifactId>javafx-maven-plugin</artifactId>
                   <version>0.0.8</version>
                   <executions>
                       <execution>
                           <goals>
                               <goal>run</goal>
                           </goals>
                       </execution>
                   </executions>
                   <configuration>
                       <mainClass>ijae.xscaccd00.Game</mainClass>
                       <options>
                           <option>--add-modules=javafx.controls,javafx.fxml</option>
                       </options>
                   </configuration>
               </plugin>
               <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-javadoc-plugin</artifactId>
                   <version>3.3.1</version>
                   <executions>
                       <execution>
                           <goals>
                               <goal>javadoc</goal>
                           </goals>
                       </execution>
                   </executions>
               </plugin>
           </plugins>
       </build>
   </project>